<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app0.com.mediaplayer.MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/play_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="25sp"
            />

        <TextView
            android:text="@string/state_prepare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPlayState"
            android:textSize="20sp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPlay"
            android:layout_weight="1" />

        <Button
            android:text="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPause"
            android:layout_weight="1" />

        <Button
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnStop"
            android:layout_weight="1" />

        <Button
            android:text="@string/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRestart"
            android:layout_weight="1" />
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar" />

</LinearLayout>
